[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/pukul_dia_lv4.png" type="Texture" id=1]
[ext_resource path="res://images/Giga_chad.png" type="Texture" id=2]
[ext_resource path="res://levels/level_4/level_4.gd" type="Script" id=3]
[ext_resource path="res://levels/level_4/font_level_4.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/lv4_ok_button.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Giga_chad:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Giga_chad:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit_animation"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Giga_chad:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Giga_chad:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 60 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Text" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Giga_chad" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="Giga_chad"]
position = Vector2( 54, 303 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hit_animation = SubResource( 2 )

[node name="text" type="RichTextLabel" parent="."]
margin_left = 224.0
margin_top = 325.0
margin_right = 349.0
margin_bottom = 388.0
custom_fonts/mono_font = ExtResource( 4 )
text = "ini tullisan"

[node name="ok_button" type="TouchScreenButton" parent="."]
position = Vector2( 209, 293 )
scale = Vector2( 0.283333, 0.283333 )
normal = ExtResource( 5 )

[connection signal="pressed" from="Giga_chad/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="ok_button" to="." method="_on_ok_button_pressed"]
